--- a/templates/results.html
+++ b/templates/results.html
@@ -15,6 +15,9 @@
         <h2>График распределения эмоций:</h2>
         <img src="{{ emotion_graph }}" alt="График распределения эмоций">
 
+	<h2>График жестов:</h2>
+        <img src="{{ gesture_graph }}" alt="График жестов">
+
         <a href="{{ url_for('index') }}">Вернуться на главную</a>
     </div>
 </body>
