--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,8 @@
         <button type="submit">Загрузить видео</button>
     </form>
     <br>
-    <a href="{{ url_for('video.video_page') }}">
+    <!-- <a href="{{ url_for('video.video_page') }}">
         <button>Перейти к записи видео</button>
-    </a>
+    </a> -->
 </body>
 </html>
